--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 </style>
 
                                      <li class="nav-item">
-  <a class="nav-link nav-glow" href="\about.html">about</a>
+  <a class="nav-link nav-glow" href="/about.html">about</a>
 </li>
 
 <style>
