--- a/services.html
+++ b/services.html
@@ -30,6 +30,9 @@
 	<link rel="stylesheet" href="css/mousecursor.css">
 	<!-- Main Custom Css -->
 	<link href="css/custom.css" rel="stylesheet" media="screen">
+    <!-- Swiper CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
 </head>
 <body>
 
@@ -282,188 +285,170 @@
 		</div>
 	</div>
 	<!-- Page Header End -->
+<!-- Our Services Section Start -->
+<div class="page-services">
+  <div class="container">
+    <div class="swiper serviceSwiper">
+      <div class="swiper-wrapper">
 
-    <!-- Our Services Section Start -->
-    <div class="page-services">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-md-6">
-                    <!-- Service Item Start -->
-                    <div class="service-item wow fadeInUp">
-                        <!-- Service Image Start -->
-                        <div class="service-image">
-                            <a href="service-single.html" data-cursor-text="View">
-                                <figure class="image-anime">
-                                    <img src="images/service-1.jpg" alt="">
-                                </figure>
-                            </a>
-                        </div>
-                        <!-- Service Image End -->
-
-                        <!-- Service Button Start -->
-                        <div class="service-btn">
-                            <a href="service-single.html"><img src="images/arrow-white.svg" alt=""></a>
-                        </div>
-                        <!-- Service Button End -->
-
-                        <!-- Service Content Start -->
-                        <div class="service-content">
-                            <h3><a href="service-single.html">residential interior design</a></h3>
-                            <p>We create personalized living spaces that reflect your style and functional needs.</p>
-                        </div>
-                        <!-- Service Content End -->
-                    </div>
-                    <!-- Service Item End -->
-                </div>
-
-                <div class="col-lg-4 col-md-6">
-                    <!-- Service Item Start -->
-                    <div class="service-item wow fadeInUp">
-                        <!-- Service Image Start -->
-                        <div class="service-image">
-                            <a href="service-single.html" data-cursor-text="View">
-                                <figure class="image-anime">
-                                    <img src="images/service-2.jpg" alt="">
-                                </figure>
-                            </a>
-                        </div>
-                        <!-- Service Image End -->
-
-                        <!-- Service Button Start -->
-                        <div class="service-btn">
-                            <a href="service-single.html"><img src="images/arrow-white.svg" alt=""></a>
-                        </div>
-                        <!-- Service Button End -->
-
-                        <!-- Service Content Start -->
-                        <div class="service-content">
-                            <h3><a href="service-single.html">commercial interior design</a></h3>
-                            <p>Enhancing business environments with professional, functional, and aesthetically.</p>
-                        </div>
-                        <!-- Service Content End -->
-                    </div>
-                    <!-- Service Item End -->
-                </div>
-
-                <div class="col-lg-4 col-md-6">
-                    <!-- Service Item Start -->
-                    <div class="service-item wow fadeInUp" data-wow-delay="0.2s">
-                        <!-- Service Image Start -->
-                        <div class="service-image">
-                            <a href="service-single.html" data-cursor-text="View">
-                                <figure class="image-anime">
-                                    <img src="images/service-3.jpg" alt="">
-                                </figure>
-                            </a>
-                        </div>
-                        <!-- Service Image End -->
-
-                        <!-- Service Button Start -->
-                        <div class="service-btn">
-                            <a href="service-single.html"><img src="images/arrow-white.svg" alt=""></a>
-                        </div>
-                        <!-- Service Button End -->
-
-                        <!-- Service Content Start -->
-                        <div class="service-content">
-                            <h3><a href="service-single.html">furniture and decor selection</a></h3>
-                            <p>Our experts help you choose the perfect furniture and decor complement your style.</p>
-                        </div>
-                        <!-- Service Content End -->
-                    </div>
-                    <!-- Service Item End -->
-                </div>
-
-                <div class="col-lg-4 col-md-6">
-                    <!-- Service Item Start -->
-                    <div class="service-item wow fadeInUp" data-wow-delay="0.4s">
-                        <!-- Service Image Start -->
-                        <div class="service-image">
-                            <a href="service-single.html" data-cursor-text="View">
-                                <figure class="image-anime">
-                                    <img src="images/service-4.jpg" alt="">
-                                </figure>
-                            </a>
-                        </div>
-                        <!-- Service Image End -->
-
-                        <!-- Service Button Start -->
-                        <div class="service-btn">
-                            <a href="service-single.html"><img src="images/arrow-white.svg" alt=""></a>
-                        </div>
-                        <!-- Service Button End -->
-
-                        <!-- Service Content Start -->
-                        <div class="service-content">
-                            <h3><a href="service-single.html">lighting design</a></h3>
-                            <p>Enhancing ambiance and functionality with thoughtfully designed lighting solutions.</p>
-                        </div>
-                        <!-- Service Content End -->
-                    </div>
-                    <!-- Service Item End -->
-                </div>
-
-                <div class="col-lg-4 col-md-6">
-                    <!-- Service Item Start -->
-                    <div class="service-item wow fadeInUp" data-wow-delay="0.6s">
-                        <!-- Service Image Start -->
-                        <div class="service-image">
-                            <a href="service-single.html" data-cursor-text="View">
-                                <figure class="image-anime">
-                                    <img src="images/service-5.jpg" alt="">
-                                </figure>
-                            </a>
-                        </div>
-                        <!-- Service Image End -->
-
-                        <!-- Service Button Start -->
-                        <div class="service-btn">
-                            <a href="service-single.html"><img src="images/arrow-white.svg" alt=""></a>
-                        </div>
-                        <!-- Service Button End -->
-
-                        <!-- Service Content Start -->
-                        <div class="service-content">
-                            <h3><a href="service-single.html">color consultation</a></h3>
-                            <p>Choosing palettes that evoke warmth, energy, or calm to match your vision.</p>
-                        </div>
-                        <!-- Service Content End -->
-                    </div>
-                    <!-- Service Item End -->
-                </div>
-
-                <div class="col-lg-4 col-md-6">
-                    <!-- Service Item Start -->
-                    <div class="service-item wow fadeInUp" data-wow-delay="0.8s">
-                        <!-- Service Image Start -->
-                        <div class="service-image">
-                            <a href="service-single.html" data-cursor-text="View">
-                                <figure class="image-anime">
-                                    <img src="images/service-6.jpg" alt="">
-                                </figure>
-                            </a>
-                        </div>
-                        <!-- Service Image End -->
-
-                        <!-- Service Button Start -->
-                        <div class="service-btn">
-                            <a href="service-single.html"><img src="images/arrow-white.svg" alt=""></a>
-                        </div>
-                        <!-- Service Button End -->
-
-                        <!-- Service Content Start -->
-                        <div class="service-content">
-                            <h3><a href="service-single.html">3D visualization</a></h3>
-                            <p>Bringing design ideas to life with realistic 3D models before the work begins.</p>
-                        </div>
-                        <!-- Service Content End -->
-                    </div>
-                    <!-- Service Item End -->
-                </div>
+        <!-- Slide 1 -->
+        <div class="swiper-slide">
+          <div class="service-item wow fadeInUp">
+            <div class="service-image">
+              <a href="service-single.html" data-cursor-text="View">
+                <figure class="image-anime">
+                  <img src="images/service-1.jpg" alt="">
+                </figure>
+              </a>
             </div>
+            <div class="service-btn">
+              <a href="service-single.html"><img src="images/arrow-white.svg" alt=""></a>
+            </div>
+            <div class="service-content">
+              <h3><a href="service-single.html">residential interior design</a></h3>
+              <p>We create personalized living spaces that reflect your style and functional needs.</p>
+            </div>
+          </div>
         </div>
+
+        <!-- Slide 2 -->
+        <div class="swiper-slide">
+          <div class="service-item wow fadeInUp">
+            <div class="service-image">
+              <a href="service-single.html" data-cursor-text="View">
+                <figure class="image-anime">
+                  <img src="images/service-2.jpg" alt="">
+                </figure>
+              </a>
+            </div>
+            <div class="service-btn">
+              <a href="service-single.html"><img src="images/arrow-white.svg" alt=""></a>
+            </div>
+            <div class="service-content">
+              <h3><a href="service-single.html">commercial interior design</a></h3>
+              <p>Enhancing business environments with professional, functional, and aesthetically.</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Slide 3 -->
+        <div class="swiper-slide">
+          <div class="service-item wow fadeInUp" data-wow-delay="0.2s">
+            <div class="service-image">
+              <a href="service-single.html" data-cursor-text="View">
+                <figure class="image-anime">
+                  <img src="images/service-3.jpg" alt="">
+                </figure>
+              </a>
+            </div>
+            <div class="service-btn">
+              <a href="service-single.html"><img src="images/arrow-white.svg" alt=""></a>
+            </div>
+            <div class="service-content">
+              <h3><a href="service-single.html">furniture and decor selection</a></h3>
+              <p>Our experts help you choose the perfect furniture and decor complement your style.</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Slide 4 -->
+        <div class="swiper-slide">
+          <div class="service-item wow fadeInUp" data-wow-delay="0.4s">
+            <div class="service-image">
+              <a href="service-single.html" data-cursor-text="View">
+                <figure class="image-anime">
+                  <img src="images/service-4.jpg" alt="">
+                </figure>
+              </a>
+            </div>
+            <div class="service-btn">
+              <a href="service-single.html"><img src="images/arrow-white.svg" alt=""></a>
+            </div>
+            <div class="service-content">
+              <h3><a href="service-single.html">lighting design</a></h3>
+              <p>Enhancing ambiance and functionality with thoughtfully designed lighting solutions.</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Slide 5 -->
+        <div class="swiper-slide">
+          <div class="service-item wow fadeInUp" data-wow-delay="0.6s">
+            <div class="service-image">
+              <a href="service-single.html" data-cursor-text="View">
+                <figure class="image-anime">
+                  <img src="images/service-5.jpg" alt="">
+                </figure>
+              </a>
+            </div>
+            <div class="service-btn">
+              <a href="service-single.html"><img src="images/arrow-white.svg" alt=""></a>
+            </div>
+            <div class="service-content">
+              <h3><a href="service-single.html">color consultation</a></h3>
+              <p>Choosing palettes that evoke warmth, energy, or calm to match your vision.</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Slide 6 -->
+        <div class="swiper-slide">
+          <div class="service-item wow fadeInUp" data-wow-delay="0.8s">
+            <div class="service-image">
+              <a href="service-single.html" data-cursor-text="View">
+                <figure class="image-anime">
+                  <img src="images/service-6.jpg" alt="">
+                </figure>
+              </a>
+            </div>
+            <div class="service-btn">
+              <a href="service-single.html"><img src="images/arrow-white.svg" alt=""></a>
+            </div>
+            <div class="service-content">
+              <h3><a href="service-single.html">3D visualization</a></h3>
+              <p>Bringing design ideas to life with realistic 3D models before the work begins.</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
     </div>
-    <!-- Our Services Section End -->
+  </div>
+</div>
+<!-- Our Services Section End -->
+<!-- Swiper JS -->
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script>
+  var swiper = new Swiper(".serviceSwiper", {
+    slidesPerView: 3,
+    spaceBetween: 30,
+    loop: true,
+    autoplay: {
+      delay: 3000,
+      disableOnInteraction: false
+    },
+    breakpoints: {
+      0: {
+        slidesPerView: 1
+      },
+      768: {
+        slidesPerView: 2
+      },
+      992: {
+        slidesPerView: 3
+      }
+    }
+  });
+</script>
+<style>
+  .swiper-slide {
+    display: flex;
+    justify-content: center;
+  }
+  .service-item {
+    width: 100%;
+  }
+</style>
 
     <!-- Why Choose Us Section Start -->
     <div class="why-choose-us">
