--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 </style>
 
                                 <li class="nav-item">
-  <a class="nav-link nav-glow" href="/1200/services.html/service-single.html">service Details</a>
+  <a class="nav-link nav-glow" href="/1200/service-single.html">service Details</a>
 </li>
 
 <style>
